--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -244,14 +244,13 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/David-o020107h/Audio
+ContentBrowserTab1.SelectedPaths=/Game/David-o020107h/Textures
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/David-o020107h/Audio/Evil_1__online-audio-converter_com__Cue.Evil_1__online-audio-converter_com__Cue
+CleanShutdown=True
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2515,6 +2514,12 @@ SoundCue.Info=True
 SoundNodeWavePlayer.WavePlayer=True
 FileMediaSource.File=True
 FileMediaSource.Platforms=True
+Texture2D.Compression=True
+Texture2D.LevelOfDetail=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.Compositing=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -2593,6 +2598,9 @@ FileMediaSource.Platforms=True
 /Game/David-o020107h/Audio/Egypt_intro_Cue.Egypt_intro_Cue=1
 /Game/David-o020107h/Audio/Death_atmospheric_1__1___online-audio-converter_com__Cue.Death_atmospheric_1__1___online-audio-converter_com__Cue=1
 /Game/David-o020107h/Audio/Evil_1__online-audio-converter_com__Cue.Evil_1__online-audio-converter_com__Cue=1
+/Game/David-o020107h/Audio/Creature_sound_Cue.Creature_sound_Cue=1
+/Game/David-o020107h/Textures/Brick_1.Brick_1=1
+/Game/Geometry/Meshes/1M_Cube_Chamfer.1M_Cube_Chamfer=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2727,7 +2735,7 @@ UNR=../../../../../../Users/c018840h/Documents/GitHub/SCollab-Proto/SP_Prototype
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
-GenericImport=F:/Group 17 work/Sounds/Evil 1/Evil 2/Evil 3/Evil 1 (online-audio-converter.com).wav
+GenericImport=F:/Group 17 work/Tiling handpainted textures/Wood/Wood texture 1.jpg
 GenericExport=C:/Users/Tony/Desktop/Level 6/Collab/SK_Mannequin_TD.FBX
 GenericOpen=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 GenericSave=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3399,6 +3407,8 @@ SequencerWidgets.TimeStamp=2018.09.20-07.56.18
 SequencerWidgets.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2018.09.20-07.56.19
 StaticMeshEditor.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2018.09.20-07.56.20
+TextureEditor.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -3447,6 +3457,8 @@ LastLogListing=LoadErrors
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/David-o020107h/Textures/Brick_4.Brick_4;
+RecentlyPlaced=/Game/David-o020107h/Textures/Brick_1.Brick_1;
 RecentlyPlaced=/Script/Engine.KillZVolume;/Engine/Transient.ActorFactoryBoxVolume_11
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/AIAgent/DerivedClasses/RangedAI.RangedAI;
@@ -3465,8 +3477,6 @@ RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.Ac
 RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
 RecentlyPlaced=/Game/GW000979/DataStruct/TargetDummy/TargetDummy.TargetDummy;
 RecentlyPlaced=/Game/GW000979/ShaneToyeSprintTest.ShaneToyeSprintTest;
-RecentlyPlaced=/Game/GW000979/TopDownCharacterTest.TopDownCharacterTest;
-RecentlyPlaced=/Game/GW000979/DataStruct/TargetDummy/TestDrop.TestDrop;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -3517,26 +3527,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/David-o020107h/Audio/Creature_sound_Cue
-MRUItem1=/Game/David-o020107h/Audio/Evil_1__online-audio-converter_com__Cue
-MRUItem2=/Game/David-o020107h/Audio/Evil_1__online-audio-converter_com___1_
-MRUItem3=/Game/David-o020107h/Audio/Death_atmospheric_1__1___online-audio-converter_com__Cue
-MRUItem4=/Game/David-o020107h/Audio/Egypt_intro_Cue
-MRUItem5=/Game/Levels/texturedzoo
-MRUItem6=/Game/Levels/assetlayout
-MRUItem7=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
-MRUItem8=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
-MRUItem9=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
-MRUItem10=/Game/GW000979/DataStruct/BaseEquipment/BaseShield
-MRUItem11=/Game/GW000979/DataStruct/Structs/AccessoryStruct
-MRUItem12=/Game/GW000979/DataStruct/Structs/Armour_Struct
-MRUItem13=/Game/Chloe/UI/I_InventoryInterface
-MRUItem14=/Game/c024816h/PickUpInterface
-MRUItem15=/Game/GW000979/DataStruct/WeaponInt
-MRUItem16=/Game/GW000979/DataStruct/WeaponInt2
-MRUItem17=/Game/AIAgent/AIbot
-MRUItem18=/Game/AIAgent/BaseAI
-MRUItem19=/Game/GW000979/DataStruct/Inventory
+MRUItem0=/Game/Geometry/Meshes/1M_Cube_Chamfer
+MRUItem1=/Game/David-o020107h/Textures/Brick_1
+MRUItem2=/Game/David-o020107h/Audio/Creature_sound_Cue
+MRUItem3=/Game/David-o020107h/Audio/Evil_1__online-audio-converter_com__Cue
+MRUItem4=/Game/David-o020107h/Audio/Evil_1__online-audio-converter_com___1_
+MRUItem5=/Game/David-o020107h/Audio/Death_atmospheric_1__1___online-audio-converter_com__Cue
+MRUItem6=/Game/David-o020107h/Audio/Egypt_intro_Cue
+MRUItem7=/Game/Levels/texturedzoo
+MRUItem8=/Game/Levels/assetlayout
+MRUItem9=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem10=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
+MRUItem11=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
+MRUItem12=/Game/GW000979/DataStruct/BaseEquipment/BaseShield
+MRUItem13=/Game/GW000979/DataStruct/Structs/AccessoryStruct
+MRUItem14=/Game/GW000979/DataStruct/Structs/Armour_Struct
+MRUItem15=/Game/Chloe/UI/I_InventoryInterface
+MRUItem16=/Game/c024816h/PickUpInterface
+MRUItem17=/Game/GW000979/DataStruct/WeaponInt
+MRUItem18=/Game/GW000979/DataStruct/WeaponInt2
+MRUItem19=/Game/AIAgent/AIbot
 
 [WidgetTemplatesExpanded]
 Extra=False
