--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -261,6 +261,7 @@ LastLevel=/Game/Levels/Demo
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2668,6 +2669,24 @@ WidgetBlueprint.ClassOptions=True
 WidgetBlueprint.Interfaces=True
 WidgetBlueprint.BlueprintOptions=True
 WidgetBlueprint.Packaging=True
+TopDownCharacter_C.Bleeding=True
+REINST_TopDownCharacter_C_158.Variable=True
+REINST_TopDownCharacter_C_158.TransformCommon=True
+REINST_TopDownCharacter_C_158.Sockets=True
+REINST_TopDownCharacter_C_158.Animation=True
+REINST_TopDownCharacter_C_158.Mesh=True
+REINST_TopDownCharacter_C_158.Materials=True
+REINST_TopDownCharacter_C_158.Clothing=True
+REINST_TopDownCharacter_C_158.ClothingSimulation=True
+REINST_TopDownCharacter_C_158.Physics=True
+REINST_TopDownCharacter_C_158.Collision=True
+REINST_TopDownCharacter_C_158.Lighting=True
+REINST_TopDownCharacter_C_158.Rendering=True
+REINST_TopDownCharacter_C_158.Tags=True
+REINST_TopDownCharacter_C_158.ComponentReplication=True
+REINST_TopDownCharacter_C_158.Activation=True
+REINST_TopDownCharacter_C_158.Cooking=True
+REINST_TopDownCharacter_C_158.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -2758,6 +2777,7 @@ WidgetBlueprint.Packaging=True
 /Game/EnemyAgent/EnemyStats.EnemyStats=0
 /Game/CombatInterface/I_Combat.I_Combat=1
 /Game/TopDownBP/Hud/I_HUD.I_HUD=0
+/Game/c024816h/BasePickUp.BasePickUp=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2777,8 +2797,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.PostProcessVolumeSettings.Settings.FilmShadowTint\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerRed\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerGreen\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerBlue\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
-Character="\"Object.PlayerHealth\" \"Object.PlayerHealth\" "
-Pawn="\"Object.PlayerHealth\" \"Object.PlayerHealth\" "
+Character="\"Object.IsBleeding\" \"Object.IsBleeding\" "
+Pawn="\"Object.IsBleeding\" \"Object.IsBleeding\" "
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C="\"Object.TargetEnemy\" \"Object.TargetEnemy\" "
@@ -2792,7 +2812,7 @@ NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
 Controller=
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C="\"Object.PlayerHealth\" \"Object.PlayerHealth\" "
+TopDownCharacter_C="\"Object.IsBleeding\" \"Object.IsBleeding\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2869,6 +2889,7 @@ BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.PostProcessVolumeSettings.Settings.FilmShadowTint\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerRed\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerGreen\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerBlue\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 REINST_TopDownCharacter_C_236="\"Object.Character.Mesh.Object.Collision.BodyInstance\" "
 CorruptedSlave_C=
+REINST_TopDownCharacter_C_158="\"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3688,20 +3709,20 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Hud/I_HUD
-MRUItem1=/Game/Chloe/UI/HUD_Proto
-MRUItem2=/Game/Levels/Demo
-MRUItem3=/Game/CombatInterface/I_Combat
-MRUItem4=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem5=/Game/EnemyAgent/EnemyStats
-MRUItem6=/Game/EnemyAgent/EnemyData
-MRUItem7=/Game/EnemyAgent/CorruptedSlave
-MRUItem8=/Game/AIAgent/BaseAI
-MRUItem9=/Game/GW000979/DataStruct/ArmourSlot
-MRUItem10=/Game/Mannequin/Character/Materials/TempCharacterInst
-MRUItem11=/Game/c024816h/TopDownCharacter3
-MRUItem12=/Game/c024816h/PickUpInterface
-MRUItem13=/Game/c024816h/BasePickUp
+MRUItem0=/Game/c024816h/BasePickUp
+MRUItem1=/Game/Levels/Demo
+MRUItem2=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem3=/Game/TopDownBP/Hud/I_HUD
+MRUItem4=/Game/Chloe/UI/HUD_Proto
+MRUItem5=/Game/CombatInterface/I_Combat
+MRUItem6=/Game/EnemyAgent/EnemyStats
+MRUItem7=/Game/EnemyAgent/EnemyData
+MRUItem8=/Game/EnemyAgent/CorruptedSlave
+MRUItem9=/Game/AIAgent/BaseAI
+MRUItem10=/Game/GW000979/DataStruct/ArmourSlot
+MRUItem11=/Game/Mannequin/Character/Materials/TempCharacterInst
+MRUItem12=/Game/c024816h/TopDownCharacter3
+MRUItem13=/Game/c024816h/PickUpInterface
 MRUItem14=/Game/TopDownBP/Interfaces/PlayerInt
 MRUItem15=/Game/TopDownBP/Blueprints/PlayerControl
 MRUItem16=/Game/AIAgent/Baseprojectile
