--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,8 +105,8 @@ CurrentRotGridSize=0
 
 [MRU]
 MRUItem0=/Game/Levels/Area2-Market
-MRUItem1=/Game/Levels/MechanicsLevel
-MRUItem2=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem2=/Game/Levels/MechanicsLevel
 MRUItem3=/Game/Levels/Demo
 MRUItem4=/Game/Levels/MainMenu
 MRUItem5=/Game/Chloe/UI/Main_Menu_level/Main_Menu
@@ -219,7 +219,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
 ContentBrowserTab1.HorizontalSplitter.SlotSize0=0.900000
 ContentBrowserTab1.HorizontalSplitter.SlotSize1=0.900000
-ContentBrowserTab1.ActiveTypeFilters=Blueprint
+ContentBrowserTab1.ActiveTypeFilters=Blueprint,StaticMesh
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
@@ -234,7 +234,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/T015548H
+ContentBrowserTab1.SelectedPaths=/Game
 
 [EditorStartup]
 LastLevel=/Game/Levels/Area2-Market
@@ -2576,6 +2576,9 @@ GeomModifier_Clip.Settings=True
 StaticMeshActor.Surface Materials=True
 StaticMeshActor.Geometry=True
 StaticMeshActor.Surface Properties=True
+InstancedFoliageActor.TransformCommon=True
+InstancedFoliageActor.Input=True
+InstancedFoliageActor.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -3507,6 +3510,7 @@ LastLogListing=MapCheck
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/Models/finishedassets/brazier/brazier_Ben_Wilkinson.brazier_Ben_Wilkinson;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter;
@@ -3526,7 +3530,6 @@ RecentlyPlaced=/Game/GW000979/Weapons/WeaponDropMonster.WeaponDropMonster;
 RecentlyPlaced=/Game/GW000979/Weapons/WeaponDropHuman.WeaponDropHuman;
 RecentlyPlaced=/Game/GW000979/Weapons/WeaponDropAnimal.WeaponDropAnimal;
 RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_WallSconce.Blueprint_WallSconce;
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
