--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,8 +105,8 @@ CurrentPosGridSize=1
 
 [MRU]
 MRUItem0=/Game/Levels/Demo
-MRUItem1=/Game/Levels/Area2-Market
-MRUItem2=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem2=/Game/Levels/Area2-Market
 MRUItem3=/Game/Levels/texturedzoo
 MRUItem4=/Game/Levels/MechanicsLevel
 MRUItem5=/Game/Levels/MainMenu
@@ -236,6 +236,7 @@ Inflict Status=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValu
 Choose Status=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,
 EdGraph=EdGraph.Inputs.InputArgument6,
+EHealth_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -259,16 +260,15 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 
 [EditorStartup]
 LastLevel=/Game/Levels/Demo
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/PlayerControl.PlayerControl
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/I_PlayerStatus.I_PlayerStatus
+OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
+OpenAssetsAtExit=/Game/GW000979/EHealth.EHealth
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2680,6 +2680,30 @@ FoliageType_InstancedStaticMesh.InstanceSettings=True
 FoliageType_InstancedStaticMesh.Physics=True
 FoliageType_InstancedStaticMesh.Scalability=True
 TopDownCharacter_C.Bleeding=True
+TopDownCharacter_C.Ability Cooldowns=True
+BaseAI_C.Stats=True
+BaseAI_C.Status=True
+BaseAI_C.Bleed=True
+BaseAI_C.Stun=True
+WidgetComponent.Variable=True
+WidgetComponent.TransformCommon=True
+WidgetComponent.Sockets=True
+WidgetComponent.Materials=True
+WidgetComponent.UserInterface=True
+WidgetComponent.Interaction=True
+WidgetComponent.Animation=True
+WidgetComponent.Layers=True
+WidgetComponent.Physics=True
+WidgetComponent.Collision=True
+WidgetComponent.Rendering=True
+WidgetComponent.Tags=True
+WidgetComponent.ComponentReplication=True
+WidgetComponent.Cooking=True
+WidgetComponent.Events=True
+WidgetBlueprint.ClassOptions=True
+WidgetBlueprint.Interfaces=True
+WidgetBlueprint.BlueprintOptions=True
+WidgetBlueprint.Packaging=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -2783,7 +2807,7 @@ SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArra
 ShapeComponent=
 PrimitiveComponent=
 SceneComponent=
-ActorComponent="\"Object.\" \"Object.\" "
+ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2791,8 +2815,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
-Character="\"Object.StunDuration\" \"Object.StunDuration\" "
-Pawn="\"Object.StunDuration\" \"Object.StunDuration\" "
+Character="\"Object.CharacterHealth\" \"Object.CharacterHealth\" "
+Pawn="\"Object.CharacterHealth\" \"Object.CharacterHealth\" "
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C="\"Object.TargetEnemy\" \"Object.TargetEnemy\" "
@@ -2806,7 +2830,7 @@ NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
 Controller=
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C="\"Object.StunDuration\" \"Object.StunDuration\" "
+TopDownCharacter_C="\"Object.BleedTimerCount\" \"Object.BleedTimerCount\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2839,17 +2863,17 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget=
+Visual=
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PlayerController=
 Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Ability_Wheel_C="\"Object.Player Ref\" \"Object.Player Ref\" "
-UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+UserWidget=
 HUD_Proto_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HybridController_C="\"Object.Default.DebugColour\" "
 BehaviorTreeGraphNode_Root=
@@ -2863,7 +2887,7 @@ Pause_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Obj
 Start_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CoolDownComponent_C="\"Object.\" \"Object.\" "
 RangedAI_C=
-BaseAI_C=
+BaseAI_C="\"Object.CharacterHealth\" \"Object.CharacterHealth\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
@@ -2888,6 +2912,7 @@ Choose Status=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Mesh\" \"Object.ImportSettings.AssetImportData.Object.Transform\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" \"Object.ImportSettings.AssetImportData.Object.Miscellaneous\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 FoliageType_InstancedStaticMesh="\"Object.Mesh.OverrideMaterials\" \"Object.InstanceSettings.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 FoliageType="\"Object.Mesh.OverrideMaterials\" \"Object.InstanceSettings.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+EHealth_C=
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -2914,7 +2939,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3631,7 +3656,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -3710,33 +3735,33 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/I_PlayerStatus
-MRUItem1=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem2=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem3=/Game/AIAgent/BaseAI
-MRUItem4=/Game/CombatInterface/I_Combat
-MRUItem5=/Game/TopDownBP/Blueprints/ICoolDown
-MRUItem6=/Game/TopDownBP/Blueprints/CoolDownComponent
-MRUItem7=/Game/Levels/Demo
-MRUItem8=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem9=/Game/Models/weapons/crystal_sword
-MRUItem10=/Game/Models/Ben/gate
-MRUItem11=/Game/Levels/Area2-Market
-MRUItem12=/Game/EnemyAgent/CorruptedSlave
-MRUItem13=/Game/EnemyAgent/EnemyStats
-MRUItem14=/Game/EnemyAgent/EnemyData
-MRUItem15=/Game/GW000979/DataStruct/ArmourSlot
-MRUItem16=/Game/Mannequin/Character/Materials/TempCharacterInst
-MRUItem17=/Game/c024816h/TopDownCharacter3
-MRUItem18=/Game/c024816h/PickUpInterface
-MRUItem19=/Game/c024816h/BasePickUp
+MRUItem0=/Game/AIAgent/AIUIInt
+MRUItem1=/Game/AIAgent/BaseAI
+MRUItem2=/Game/GW000979/EHealth
+MRUItem3=/Game/Levels/Demo
+MRUItem4=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem5=/Game/TopDownBP/Blueprints/I_PlayerStatus
+MRUItem6=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem7=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem8=/Game/CombatInterface/I_Combat
+MRUItem9=/Game/TopDownBP/Blueprints/ICoolDown
+MRUItem10=/Game/TopDownBP/Blueprints/CoolDownComponent
+MRUItem11=/Game/Models/weapons/crystal_sword
+MRUItem12=/Game/Models/Ben/gate
+MRUItem13=/Game/Levels/Area2-Market
+MRUItem14=/Game/EnemyAgent/CorruptedSlave
+MRUItem15=/Game/EnemyAgent/EnemyStats
+MRUItem16=/Game/EnemyAgent/EnemyData
+MRUItem17=/Game/GW000979/DataStruct/ArmourSlot
+MRUItem18=/Game/Mannequin/Character/Materials/TempCharacterInst
+MRUItem19=/Game/c024816h/TopDownCharacter3
 
 [WidgetTemplatesExpanded]
 Extra=False
 Input=False
 Lists=False
 Optimization=False
-Panel=False
+Panel=True
 Primitive=False
 Special Effects=False
 Uncategorized=False
