ability wheel changes

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -175,7 +175,7 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.Ac
 SphereComponent=SphereComponent.Collision.Collision,
 TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
-AIbot_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+AIbot_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 ObjectProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
@@ -203,10 +203,10 @@ TeleportOut_C=
 Teleport_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 TextProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 PlayerController=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-Ability_Wheel_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+Ability_Wheel_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 RangeFinder_C=
 Button=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-HUD_Proto_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+HUD_Proto_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 PlayerControl_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 CoolDownComponent_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 RangedAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
@@ -258,13 +258,16 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/AIAgent
+ContentBrowserTab1.SelectedPaths=/Game
 
 [EditorStartup]
 LastLevel=/Game/Levels/Area2-Market
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/AIAgent/AIbot.AIbot
+OpenAssetsAtExit=/Game/Widgets/Ability_Wheel.Ability_Wheel
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2676,6 +2679,47 @@ FoliageType_InstancedStaticMesh.InstanceSettings=True
 FoliageType_InstancedStaticMesh.Physics=True
 FoliageType_InstancedStaticMesh.Scalability=True
 TopDownCharacter_C.Bleeding=True
+REINST_TopDownCharacter_C_142.None=True
+REINST_TopDownCharacter_C_142.Tick=True
+REINST_TopDownCharacter_C_142.Character=True
+REINST_TopDownCharacter_C_142.Camera=True
+REINST_TopDownCharacter_C_142.Pawn=True
+REINST_TopDownCharacter_C_142.Rendering=True
+REINST_TopDownCharacter_C_142.Replication=True
+REINST_TopDownCharacter_C_142.Input=True
+REINST_TopDownCharacter_C_142.Actor=True
+REINST_TopDownCharacter_C_163.None=True
+REINST_TopDownCharacter_C_163.Tick=True
+REINST_TopDownCharacter_C_163.Character=True
+REINST_TopDownCharacter_C_163.Camera=True
+REINST_TopDownCharacter_C_163.Pawn=True
+REINST_TopDownCharacter_C_163.Rendering=True
+REINST_TopDownCharacter_C_163.Replication=True
+REINST_TopDownCharacter_C_163.Input=True
+REINST_TopDownCharacter_C_163.Actor=True
+CircularThrobber.Layout=True
+CircularThrobber.Appearance=True
+CircularThrobber.Behavior=True
+CircularThrobber.Render Transform=True
+CircularThrobber.Performance=True
+CircularThrobber.Clipping=True
+CircularThrobber.Navigation=True
+BackgroundBlur.Layout=True
+BackgroundBlur.Content=True
+BackgroundBlur.Appearance=True
+BackgroundBlur.Behavior=True
+BackgroundBlur.Render Transform=True
+BackgroundBlur.Performance=True
+BackgroundBlur.Clipping=True
+BackgroundBlur.Navigation=True
+CurveLinearColorAtlas.Curves=True
+CurveLinearColorAtlas.Adjustments=True
+Texture2D.Compression=True
+Texture2D.LevelOfDetail=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.Compositing=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -2767,13 +2811,14 @@ TopDownCharacter_C.Bleeding=True
 /Game/CombatInterface/I_Combat.I_Combat=1
 /Game/Models/weapons/crystal_sword.crystal_sword=0
 /Game/Models/Ben/gate.gate=0
+/Game/Will/segmenttest.segmenttest=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Player Hud\" \"Object.Player Hud\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent=
 PrimitiveComponent=
@@ -2801,7 +2846,7 @@ NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
 Controller=
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C="\"Object.Ability Seven Cost\" \"Object.Ability Seven Cost\" "
+TopDownCharacter_C=
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2834,17 +2879,17 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Player Hud\" \"Object.Player Hud\" "
+Visual="\"Object.Player Hud\" \"Object.Player Hud\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PlayerController=
 Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Ability_Wheel_C="\"Object.Player Ref\" \"Object.Player Ref\" "
-UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Ability_Wheel_C="\"Object.Player Hud\" \"Object.Player Hud\" "
+UserWidget="\"Object.Player Hud\" \"Object.Player Hud\" "
 HUD_Proto_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HybridController_C="\"Object.Default.DebugColour\" "
 BehaviorTreeGraphNode_Root=
@@ -2883,6 +2928,8 @@ Choose Status=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Mesh\" \"Object.ImportSettings.AssetImportData.Object.Transform\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" \"Object.ImportSettings.AssetImportData.Object.Miscellaneous\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 FoliageType_InstancedStaticMesh="\"Object.Mesh.OverrideMaterials\" \"Object.InstanceSettings.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 FoliageType="\"Object.Mesh.OverrideMaterials\" \"Object.InstanceSettings.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+CircularThrobber="\"Object.Appearance.Image\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+BackgroundBlur="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3585,6 +3632,8 @@ SequencerWidgets.TimeStamp=2018.09.20-07.56.18
 SequencerWidgets.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2018.09.20-07.56.19
 StaticMeshEditor.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2018.09.20-07.56.20
+TextureEditor.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -3626,7 +3675,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -3705,37 +3754,37 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem1=/Game/Models/weapons/crystal_sword
-MRUItem2=/Game/Models/Ben/gate
-MRUItem3=/Game/Levels/Area2-Market
-MRUItem4=/Game/AIAgent/BaseAI
-MRUItem5=/Game/CombatInterface/I_Combat
-MRUItem6=/Game/EnemyAgent/CorruptedSlave
-MRUItem7=/Game/EnemyAgent/EnemyStats
-MRUItem8=/Game/EnemyAgent/EnemyData
-MRUItem9=/Game/GW000979/DataStruct/ArmourSlot
-MRUItem10=/Game/Mannequin/Character/Materials/TempCharacterInst
-MRUItem11=/Game/c024816h/TopDownCharacter3
-MRUItem12=/Game/c024816h/PickUpInterface
-MRUItem13=/Game/c024816h/BasePickUp
-MRUItem14=/Game/TopDownBP/Interfaces/PlayerInt
-MRUItem15=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem16=/Game/Levels/Demo
-MRUItem17=/Game/AIAgent/Baseprojectile
-MRUItem18=/Game/T019847G/DeathZone
-MRUItem19=/Game/TopDownBP/Interactexample/Door
+MRUItem0=/Game/Will/segmenttest
+MRUItem1=/Game/Widgets/Ability_Wheel
+MRUItem2=/Game/AIAgent/AIbot
+MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem4=/Game/Levels/Area2-Market
+MRUItem5=/Game/Models/weapons/crystal_sword
+MRUItem6=/Game/Models/Ben/gate
+MRUItem7=/Game/AIAgent/BaseAI
+MRUItem8=/Game/CombatInterface/I_Combat
+MRUItem9=/Game/EnemyAgent/CorruptedSlave
+MRUItem10=/Game/EnemyAgent/EnemyStats
+MRUItem11=/Game/EnemyAgent/EnemyData
+MRUItem12=/Game/GW000979/DataStruct/ArmourSlot
+MRUItem13=/Game/Mannequin/Character/Materials/TempCharacterInst
+MRUItem14=/Game/c024816h/TopDownCharacter3
+MRUItem15=/Game/c024816h/PickUpInterface
+MRUItem16=/Game/c024816h/BasePickUp
+MRUItem17=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem18=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem19=/Game/Levels/Demo
 
 [WidgetTemplatesExpanded]
-Extra=False
-Input=False
+Extra=True
+Input=True
 Lists=False
-Optimization=False
-Panel=False
+Optimization=True
+Panel=True
 Primitive=False
-Special Effects=False
-Uncategorized=False
-User Created=False
+Special Effects=True
+Uncategorized=True
+User Created=True
 
 [UMGEditor.Designer]
 PreviewWidth=1280
